I fixed a few more places where wrapping was needed

--- a/static/style.css
+++ b/static/style.css
@@ -188,6 +188,13 @@ input[type="submit"], button {
 .booking_image {
 	max-width: 30%;
 	max-height: 100%;
+	min-width: 500px;
+}
+
+.booking_image_single {
+	max-width: 60%;
+	max-height: 100%;
+	min-width: 500px;
 }
 
 .space_between {
